<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="lorem_name" tools:ignore="ResourceName">Lorem Ipsum</string>
    <string name="lorem_short" tools:ignore="ResourceName">Lorem ipsum dolor sit amet, consectetur
        adipiscing elit.
    </string>
    <string name="lorem_medium" tools:ignore="ResourceName">Lorem ipsum dolor sit amet, consectetur
        adipiscing elit sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
    </string>
    <string name="lorem_long" tools:ignore="ResourceName">Lorem ipsum dolor sit amet, consectetur
        adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
    </string>
    <string name="rsb_consent">Consent</string>
    <string name="rsb_consent_section_welcome">Welcome</string>
    <string name="rsb_consent_section_data_gathering">Data Gathering</string>
    <string name="rsb_consent_section_privacy">Privacy</string>
    <string name="rsb_consent_section_data_use">Data Use</string>
    <string name="rsb_consent_section_time_commitment">Time Commitment</string>
    <string name="rsb_consent_section_study_survey">Study Survey</string>
    <string name="rsb_consent_section_study_tasks">Study Tasks</string>
    <string name="rsb_consent_section_withdrawing">Withdrawing</string>
    <string name="rsb_consent_learn_more">Learn More</string>
    <string name="rsb_consent_document_review_message">By agreeing you confirm that you read the consent and that you wish to take part in this research study.</string>
    <string name="rsb_consent_section_more_info">Learn more</string>
    <string name="rsb_consent_section_more_info_data_gathering">Learn more about how data is
        gathered
    </string>
    <string name="rsb_consent_section_more_info_data_use">Learn more about how data is used</string>
    <string name="rsb_consent_section_more_info_privacy">Learn more about how your privacy and
        identity are protected
    </string>
    <string name="rsb_consent_section_more_info_welcome">Learn more about the study first</string>
    <string name="rsb_consent_section_more_info_study_survey">Learn more about the study survey
    </string>
    <string name="rsb_consent_section_more_info_time_commitment">Learn more about the study\'s
        impact on your time
    </string>
    <string name="rsb_consent_section_more_info_study_tasks">Learn more about the tasks involved
    </string>
    <string name="rsb_consent_section_more_info_withdrawing">Learn more about withdrawing</string>
    <string name="rsb_consent_share_title">Sharing Options</string>
    <string name="rsb_consent_share_no">Not sharing your data</string>
    <string name="rsb_consent_share_description"><![CDATA[%1$s will receive your study data from your
        participation in this study. \n\nSharing your coded study data more broadly (without
        information such as your name) may benefit this and future research.<br/><br/><a href="%2$s">
        Learn more about data sharing</a>]]>
    </string>
    <string name="rsb_consent_review_title">Review</string>
    <string name="rsb_consent_review_alert_title">Review</string>
    <string name="rsb_consent_review_reason">By agreeing you confirm that you read the information
        and that you wish to take part in this research study.
    </string>
    <string name="rsb_consent_review_instruction">Review the form below, and tap Agree if you\'re
        ready to continue.
    </string>
    <string name="rsb_consent_review_cancel">Cancel</string>
    <string name="rsb_consent_form_title">Consent</string>
    <string name="rsb_consent_name_full">Full Name</string>
    <string name="rsb_consent_dob_full">Date of Birth</string>
    <string name="rsb_consent_name_placeholder">Required</string>
    <string name="rsb_consent_signature_title">Signature</string>
    <string name="rsb_consent_signature_content">By agreeing you confirm that you read the consent
        and that you wish to take part in this research study.
    </string>
    <string name="rsb_consent_signature_instruction">Please sign using your finger on the line
        below.
    </string>
    <string name="rsb_consent_signature_placeholder">Sign Here</string>
    <string name="rsb_consent_signature_clear">Clear</string>
    <string name="rsb_quiz">Quiz</string>
    <string name="rsb_quiz_evaluation">Quiz Evaluation</string>
    <string name="rsb_quiz_evaluation_try_again">Try Again</string>
    <string name="rsb_quiz_evaluation_review_consent">Review Consent</string>
    <string name="rsb_quiz_evaluation_retake">Retake Quiz</string>
    <string name="rsb_quiz_evaluation_great_job">Great Job!</string>
    <string name="rsb_submit">Submit</string>
    <string name="rsb_exit">Exit</string>
    <string name="rsb_get_started">Get Started</string>
    <string name="rsb_done">Done</string>
    <string name="rsb_step_skip">Skip</string>
    <string name="rsb_next">Next</string>
    <string name="rsb_what_to_expect">What to Expect</string>
    <string name="rsb_name">Name</string>
    <string name="rsb_name_placeholder">Enter full name</string>
    <string name="rsb_email">Email</string>
    <string name="rsb_email_placeholder">jappleseed@example.com</string>
    <string name="rsb_external_id">External ID</string>
    <string name="rsb_external_id_placeholder">Enter external ID</string>
    <string name="rsb_password">Password</string>
    <string name="rsb_password_placeholder">Enter password</string>
    <string name="rsb_confirm_password">Confirm</string>
    <string name="rsb_confirm_password_placeholder">Enter password again</string>
    <string name="rsb_birthdate">Date of Birth</string>
    <string name="rsb_birthdate_placeholder">Pick a date</string>
    <string name="rsb_gender">Gender</string>
    <string name="rsb_gender_placeholder">Pick a gender</string>
    <string name="rsb_gender_male">Male</string>
    <string name="rsb_gender_female">Female</string>
    <string name="rsb_gender_other">Other</string>
    <string name="rsb_disagree">Disagree</string>
    <string name="rsb_agree">Agree</string>
    <string name="rsb_ok">OK</string>
    <string name="rsb_cancel">Cancel</string>
    <string name="rsb_yes">Yes</string>
    <string name="rsb_no">No</string>
    <string name="rsb_not_sure">Not sure</string>
    <string name="rsb_format_step_title">Step %1$d of %2$d</string>
    <string name="rsb_time_years">Years</string>
    <string name="rsb_time_months">Months</string>
    <string name="rsb_time_weeks">Weeks</string>
    <string name="rsb_time_days">Days</string>
    <string name="rsb_time_hours">Hours</string>
    <string name="rsb_time_minutes">Minutes</string>
    <string name="rsb_time_seconds">Seconds</string>
    <string name="rsb_more_than_ago">More than %s ago</string>
    <string name="rsb_less_than_ago">Less than %s ago</string>
    <string name="rsb_range_ago">%s ago</string>
    <string name="rsb_loading_ellipses">Loading...</string>
    <string name="rsb_forgot_password">Forgot your Password?</string>
    <string name="rsb_log_out">Log out</string>
    <string name="rsb_enable">Enable</string>
    <string name="rsb_distance_meters">meters</string>
    <string name="rsb_distance_feet">feet</string>
    <string name="rsb_error_no_internet">Please check your network connection and try again.</string>
    <string name="rsb_recording">Recording</string>
    <string name="rsb_recorder_notification_title">Recording</string>
    <string name="rsb_error_data_failed">FailedP to load encrypted data, try again!</string>
    <string name="rsb_error_invalid_signature">Signature Invalid</string>
    <string name="rsb_invalid_answer_default">Invalid answer, try again!</string>
    <string name="rsb_invalid_answer_date_over">Invalid answer, date must be before %1$s</string>
    <string name="rsb_invalid_answer_date_under">Invalid answer, date must be after %1$s</string>
    <string name="rsb_invalid_answer_integer_over">Invalid answer, your value must be %1$s or lower</string>
    <string name="rsb_invalid_answer_integer_under">Invalid answer, your value must be %1$s or higher</string>
    <string name="rsb_invalid_answer_choice">Please select a value!</string>
    <string name="rsb_invalid_answer_date_none">Please choose a date.</string>
    <string name="rsb_birth_date_too_old">You must be %1$s years or younger</string>
    <string name="rsb_birth_date_too_young">You must be at least %1$s years old</string>
    <string name="rsb_pincode_enter_title">Enter your passcode</string>
    <string name="rsb_pincode_enter_summary">Enter your %1$d-%2$s code to confirm your identity.</string>
    <string name="rsb_pincode_enter_digit">digit</string>
    <string name="rsb_pincode_enter_letter">letter</string>
    <string name="rsb_pincode_enter_character">character</string>
    <string name="rsb_pincode_enter_error">That code doesn’t match the one you entered, Try again!</string>
    <string name="rsb_fingerprint_title">Protect your data</string>
    <string name="rsb_fingerprint_text">Use your device\'s fingerprint sensor to confirm your identity.</string>
    <string name="rsb_fingerprint_hint">Touch sensor</string>
    <string name="rsb_fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="rsb_fingerprint_success">Fingerprint recognized</string>
    <string name="rsb_fingerprint_invalidated">Device fingerprint has either changed or been removed.  You must login again to continue.</string>
    <string name="rsb_fingerprint_use_passcode">A passcode is less secure; however, it may be more convenient given your usage requirements.</string>
    <string name="rsb_use_passcode">Use passcode</string>
    <string name="rsb_hint_step_body_int">Enter a number %1$d-%2$d</string>
    <string name="rsb_hint_step_body_dec">Enter a number %1$.2f-%2$.2f</string>
    <string name="rsb_hint_step_body_int_no_max">Enter a number</string>
    <string name="rsb_hint_step_body_date">Enter a date</string>
    <string name="rsb_hint_step_body_time">Enter a time</string>
    <string name="rsb_hint_step_body_datetime">Enter a date and a time</string>
    <string name="rsb_hint_step_body_text">Answer</string>
    <string name="rsb_chart_progress_center">%1$s of %2$s</string>
    <string name="rsb_chart_pie_value">%1$s&#65285;</string>
    <string name="rsb_error_assetvideoview_title">Video problem</string>
    <string name="rsb_error_assetvideoview_invalid_progressive_playback">This video isn\'t valid for streaming to this device.</string>
    <string name="rsb_error_assetvideoview_unknown">Can\'t play this video.</string>
    <string name="rsb_error_assetvideoview_button">OK</string>
    <string name="rsb_passcode_change_title">Change Passcode</string>
    <string name="rsb_passcode">Passcode</string>
    <string name="rsb_passcode_create_title">Choose a passcode</string>
    <string name="rsb_passcode_create_summary">Enter a secure, %1$d-%2$s code to protect your data and log in
        faster.
    </string>
    <string name="rsb_passcode_confirm_title">Confirm your passcode</string>
    <string name="rsb_passcode_confirm_summary">Enter your %1$d-%2$s code one more time to confirm.</string>
    <string name="rsb_permission_disclaimer">Participation in the study requires some permissions
        from your device.
    </string>
    <string name="rsb_confirm_title">Check your email</string>
    <string name="rsb_confirm_diff">ENTER A DIFFERENT EMAIL</string>
</resources>