<?xml version="1.0" encoding="utf-8"?>
<!-- Change to RelativeLayout for preview to work -->
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/rsb_margin_left"
        android:layout_marginRight="@dimen/rsb_margin_right"

        android:textSize="20sp"
        android:textColor="?attr/colorAccent"

        tools:text="@string/lorem_name"
    />

    <TextView
        android:id="@+id/summary"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="@dimen/rsb_margin_left"
        android:layout_marginRight="@dimen/rsb_margin_right"
        tools:text="@string/lorem_medium"
    />

    <org.researchstack.backbone.ui.views.SignatureView
        android:id="@+id/layout_consent_review_signature"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_below="@+id/summary"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/rsb_padding_medium"
        android:layout_marginRight="@dimen/rsb_padding_medium"
        android:paddingBottom="52dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:signatureColor="?attr/colorAccent"
    />

    <org.researchstack.backbone.ui.views.SubmitBar
        android:id="@+id/submit_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>


    <android.support.v7.widget.AppCompatTextView
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/layout_consent_review_signature_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/rsb_submit_bar_negative"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/rsb_consent_signature_clear"
        android:layout_alignTop="@+id/submit_bar"
    />

</merge>


