<?xml version="1.0" encoding="utf-8"?><!-- Change to RelativeLayout for preview to work -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:filterTouchesWhenObscured="true">

    <TextView
        android:id="@+id/header"
        style="@style/TextStyle4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/rsb_margin_left"
        android:layout_marginEnd="@dimen/rsb_margin_right"
        android:layout_marginTop="@dimen/rsb_margin_top_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/rsb_consent"/>

    <TextView
        android:id="@+id/title"
        style="@style/H5SelectedOnSecondaryHighEmphasisLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/rsb_margin_left"
        android:layout_marginEnd="@dimen/rsb_margin_right"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:text="@string/lorem_name" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/rsb_margin_top_extra_small"
        android:background="@color/very_light_pink_six"
        app:layout_constraintTop_toBottomOf="@id/title"/>


    <TextView
        android:id="@+id/summary"
        style="@style/TextStyleConsentDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/rsb_margin_left"
        android:layout_marginEnd="@dimen/rsb_margin_right"
        android:layout_marginTop="@dimen/rsb_margin_top_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:text="@string/lorem_medium" />

    <org.researchstack.backbone.ui.views.SignatureView
        android:background="@drawable/bg_consent_signature"
        android:id="@+id/layout_consent_review_signature"
        android:layout_width="match_parent"
        android:layout_height="286dp"
        android:layout_marginStart="@dimen/rsb_padding_medium"
        android:layout_marginEnd="@dimen/rsb_padding_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summary"
        android:layout_marginTop="14dp"
        android:padding="10dp"
        app:signatureColor="?attr/colorAccent" />

    <org.researchstack.backbone.ui.views.SubmitBar
        android:id="@+id/submit_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/layout_consent_review_signature_clear"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/submit_bar"
        android:text="@string/rsb_consent_signature_clear"
        android:textColor="@color/rsb_submit_bar_negative"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/submit_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>


