<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/rsb_padding_medium"
    >

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="72dp"
            android:minWidth="72dp"
            android:scaleType="center"
            android:visibility="gone"
            tools:visibility="visible"
        />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/rsb_padding_medium"
            tools:text="@string/lorem_name"
        />

        <TextView
            android:id="@+id/text"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="gone"
            tools:text="@string/lorem_name"
            tools:visibility="visible"
        />

        <TextView
            android:id="@+id/more_info"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:textColor="?attr/colorAccent"
            android:visibility="gone"
            tools:text="More Info"
            tools:visibility="visible"
        />

        <Space
            android:id="@+id/step_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />

        <Space
            android:id="@+id/filler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rsb_next"
        />

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/rsb_step_skip"
        />

    </LinearLayout>

</ScrollView>
