<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:filterTouchesWhenObscured="true">

    <TextView
        android:id="@+id/header"
        style="@style/TextStyle4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/rsb_margin_left"
        android:layout_marginEnd="@dimen/rsb_margin_right"
        android:layout_marginTop="@dimen/rsb_margin_top_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/rsb_consent"/>

    <TextView
        android:id="@+id/title"
        style="@style/H5SelectedOnSecondaryHighEmphasisLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/rsb_margin_left"
        android:layout_marginEnd="@dimen/rsb_margin_right"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:text="@string/lorem_name" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/rsb_margin_top_extra_small"
        android:background="@color/very_light_pink_six"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        tools:src="@drawable/rsb_debug_gray"
        android:layout_marginStart="@dimen/rsb_margin_left"
        android:layout_marginEnd="@dimen/rsb_margin_right"
        app:layout_constraintTop_toBottomOf="@id/divider"/>

    <TextView
        android:id="@+id/summary"
        style="@style/TextStyle18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rsb_margin_top_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/rsb_margin_left"
        android:layout_marginEnd="@dimen/rsb_margin_right"
        app:layout_constraintTop_toBottomOf="@+id/image"
        tools:text="@string/lorem_medium" />

    <TextView
        android:id="@+id/more_info"
        style="@style/ButtonSecondaryLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summary"
        android:layout_marginStart="@dimen/rsb_margin_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary"
        android:layout_marginTop="@dimen/rsb_margin_top_large"
        android:textAllCaps="true"
        tools:text="More Info" />

</merge>